# english-namenet

./: .gitignore  README.md  languages_reviewed.csv  linked_occupations_reviewed.csv  overlaps_evaluated.csv  pyproject.toml  species_conflicts_reviewed.csv  species_reviewed.csv  taxon2common_reviewed.csv  taxon_linking_manual.csv  taxon_linking_reviewed.csv  taxon_ssids_reviewed.csv
data/addendum/: adj.all.yaml  adj.pert.yaml  entries-a.yaml  entries-b.yaml  entries-c.yaml  entries-d.yaml  entries-e.yaml  entries-f.yaml  entries-g.yaml  entries-h.yaml  entries-i.yaml  entries-j.yaml  entries-k.yaml  entries-l.yaml  entries-m.yaml  entries-n.yaml  entries-o.yaml  entries-p.yaml  entries-q.yaml  entries-r.yaml  entries-s.yaml  entries-t.yaml  entries-u.yaml  entries-v.yaml  entries-w.yaml  entries-x.yaml  entries-y.yaml  entries-z.yaml  noun.act.yaml  noun.animal.yaml  noun.artifact.yaml  noun.attribute.yaml  noun.body.yaml  noun.cognition.yaml  noun.communication.yaml  noun.event.yaml  noun.feeling.yaml  noun.food.yaml  noun.group.yaml  (+17 more)
open_english_namenet/: eval_mapping.py  export_xml.py  find_overlaps.py  generate.py  humans.py  languages.py  move_oewn_entries.py  open_english_namenet.py  species.py  taxon.py  taxon_align.py  taxon_from_manual.py  wikidata_from_manual.py
open_english_termnet/: count_size.py  eval_mapping.py  find_overlaps.py  generate.py  humans.py  languages.py  open_english_termnet.py  species.py  taxon.py  taxon_align.py  taxon_from_manual.py  wikidata_from_manual.py
wikidata_db/: Cargo.toml  build_db.sh
wikidata_db/src/: main.rs
(+41 files in other folders)
