[package]
name = "wikidata_dump_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.1"
indicatif = "0.17.9"
json = "0.12.4"
thiserror = "2.0.3"
threadpool = "1.8.1"
